--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 <html>
 
     <head>
-        <title>TODO supply a title</title>
+        <title>TODO supply a title2</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
